# astro-zap

./: .gitignore  README.md
contracts/astrozap/: Cargo.toml  rustfmt.toml
contracts/astrozap/src/: contract.rs  contract_tests.rs  helpers.rs  lib.rs  math.rs  msg.rs  state.rs
contracts/astrozap/src/test_utils/: custom_mock_api.rs  custom_mock_querier.rs  helpers.rs  mod.rs  pair_querier.rs
docs/: arxiv.sty  astrozap.tex
scripts/: 1_cfmm.ts  2_quadratic.ts  3_helpers.ts  4_deploy.ts  5_enter.ts  6_migrate.ts  6_simulate.ts  cfmm.ts  math.ts  package-lock.json  package.json
