[package]
name = "astrozap"
version = "0.1.0"
authors = ["larry <larry@delphidigital.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/larry0x/astrozap"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[profile.release]
rpath = false
lto = true
overflow-checks = true

[dependencies]
astroport = "0.3.1"
cosmwasm-std = "0.16.0"
cw20 = "0.9.1"
cw-asset = { version = "0.3.4", features = ["legacy"] }
cw-bigint = { git = "https://github.com/larry0x/cw-bigint" }
cw-storage-plus = "0.9.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
# We use `compute_swap` function from the pair contract in our mock querier
astroport-pair = { git = "https://github.com/astroport-fi/astroport-core", tag = "v1.0.0" }