[package]
name = "astrozap"
version = "1.0.0"
authors = ["larry <larry@delphidigital.io>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/larry0x/astrozap"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[profile.release]
rpath = false
lto = true
overflow-checks = true

[dependencies]
astroport = "^1.0"
cosmwasm-std = "^0.16"
cw20 = "^0.9"
cw-asset = { version = "^1.0", features = ["legacy"] }
cw-bigint = { version = "0.4.3", git = "https://github.com/astroport-fi/cw-bigint" } # `cw-bigint` is a fork of `num-bigint` with float operators removed
cw-storage-plus = "^0.9"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
# We use `compute_swap` function from the pair contract in our mock querier
astroport-pair = { git = "https://github.com/astroport-fi/astroport-core", tag = "v1.0.0" }